Added list items

--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <body>
         <h1>Git Tutorial</h1>
         <p>In this 2019 Git tutorial you will learn the basics of Git and GitHub in 30 minutes. We will cover basic commands such as init, add, commit, checkout, branch, and merge. After covering the basic commands I will go over the integrated Git features in Visual Studio Code (VS Code).</p>
+        <ul>
+            <li>list 001</li>
+            <li>list 002</li>
+            <li>list 003</li>
+            <li>list 004</li>
+            <li>list 005</li>
+            <li>list 006</li>
+        </ul>
     </body>
 </html>
