--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Git Tutorial</title>
     </head>
     <body>
-        <h1>Git Tutorial</h1>
+        <h1>Awesome Git Tutorial</h1>
         <p>In this 2019 Git tutorial you will learn the basics of Git and GitHub in 30 minutes. We will cover basic commands such as init, add, commit, checkout, branch, and merge. After covering the basic commands I will go over the integrated Git features in Visual Studio Code (VS Code).</p>
         <ul>
             <li>list 001</li>
